sebaubuntu_libs: Add GitPython to deps
Change-Id: If3e14d9fb935278902d02bcdd81274ffb73d1110

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/SebaUbuntu/sebaubuntu_libs"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+GitPython = "^3.1.27"
 
 [tool.poetry.dev-dependencies]
 
