--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/sebaubuntu-python/sebaubuntu_libs"
 [tool.poetry.dependencies]
 python = "^3.8"
 GitPython = "^3.1.27"
+requests = "^2.28.1"
 
 [tool.poetry.dev-dependencies]
 
