sebaubuntu_libs: libandroid: elf: Initial version
Change-Id: I972fda9facf2e2f89aa1f3ca5df1cc379fa4b7bd

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/sebaubuntu-python/sebaubuntu_libs"
 python = "^3.8"
 GitPython = "^3.1.27"
 requests = "^2.28.1"
+pyelftools = "^0.29"
 
 [tool.poetry.dev-dependencies]
 
