--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ python = "^3.8"
 GitPython = "^3.1.27"
 requests = "^2.28.1"
 pyelftools = ">=0.29,<0.31"
+sphinx = { version = ">=5.0.1,<8.0.0", optional = true }
+sphinx-rtd-theme = { version = ">=1,<3", optional = true }
+
+[tool.poetry.extras]
+docs = ["sphinx", "sphinx-rtd-theme"]
 
 [tool.poetry.dev-dependencies]
 
