--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "sebaubuntu_libs"
 version = "1.5.0"
 description = "SebaUbuntu's shared libs"
-authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]
+authors = ["Sebastiano Barezzi <seba@sebaubuntu.dev>"]
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/sebaubuntu-python/sebaubuntu_libs"
